--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,7 @@
-main: "jp.jyn.byebyewither.ByeByeWither"
 name: "ByeByeWither"
-version: "${project.version}"
-website: "${project.url}"
-author: "HimaJyun( https://jyn.jp/ )"
+version: @version@
+main: "jp.jyn.byebyewither.ByeByeWither"
+author: "HimaJyun( https://jyn.jp/ ) and GiganticMinecraft ( https://www.seichi.network/ )"
 api-version: 1.18
 
 commands:
