--- a/.github/workflows/ci-and-cd.yaml
+++ b/.github/workflows/ci-and-cd.yaml
@@ -11,8 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Setup Java & Gradle
-        uses: ./.github/actions/setup
+      - name: Setup Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 17
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
       - name: Build
         uses: gradle/gradle-build-action@v2
         with:
