--- a/.github/workflows/ci-and-cd.yaml
+++ b/.github/workflows/ci-and-cd.yaml
@@ -30,6 +30,7 @@ jobs:
   output-sha:
     name: 最終コミットのSHA値を取得する
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
     outputs:
       sha: ${{ steps.output-sha.outputs.sha }}
     steps:
