--- a/.github/workflows/ci-and-cd.yaml
+++ b/.github/workflows/ci-and-cd.yaml
@@ -8,6 +8,7 @@ on:
       - main
 jobs:
   ci:
+    name: Build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -42,6 +43,7 @@ jobs:
           echo "sha=$VALUE" >> $GITHUB_OUTPUT
         shell: bash
   cd:
+    name: Release
     runs-on: ubuntu-latest
     needs:
       - ci
